--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ blog-*.tar
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
+
+/config/db/dev.secret.exs
+/config/db/test.secret.exs
