Fix db config files

--- a/config/db/test.secret.exs.example
+++ b/config/db/test.secret.exs.example
@@ -1,3 +1,5 @@
+use Mix.Config
+
 # Configure your database
 #
 # The MIX_TEST_PARTITION environment variable can be used
@@ -7,6 +9,6 @@ config :blog, Blog.Repo,
   username: "postgres",
   password: "postgres",
   database: "blog_test#{System.get_env("MIX_TEST_PARTITION")}",
-  hostname: "localhost",
+  hostname: "db",
   pool: Ecto.Adapters.SQL.Sandbox
 
