--- a/config/db/dev.secret.exs.example
+++ b/config/db/dev.secret.exs.example
@@ -1,9 +1,11 @@
+use Mix.Config
+
 # Configure your database
 config :blog, Blog.Repo,
   username: "postgres",
   password: "postgres",
   database: "blog_dev",
-  hostname: "localhost",
+  hostname: "db",
   show_sensitive_data_on_connection_error: true,
   pool_size: 10
 
